# StreamingKWS

./: .gitignore  .pre-commit-config.yaml  README.md  config.resolved.json  explore_aug_noise.py  labels.json  metrics.html  provenance.json  pyproject.toml  setup.sh  task.md  todo.md  train.sh
configs/: config.yaml  infer.yaml
scripts/: plot_metrics.sh  sync_checkpoint.sh  train.sh
src/: augmentations.py  checkpoint_manager.py  configs.py  dataloaders.py  dataset.py  download_dataset.py  eval.py  infer.py  launch.py  metric_logger.py  model.py  seed.py  streaming_infer.py  train.py  train_utils.py  transforms.py  weighted_sampler.py
src/inference/: __init__.py  buffer.py  io.py  runner.py  stream_app.py
tools/: plot_metrics.py
