[project]
name = "e2e9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ema-pytorch>=0.7.9",
    "numpy>=2.4.2",
    "packaging>=26.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "safetensors>=0.7.0",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
]
